@@ -35,7 +35,7 @@ field_settings:
     type: boolean
     datasource_id: 'entity:node'
     property_path: status
-    index_locked: true
+    indexed_locked: true
     type_locked: true
   sticky:
     label: 'Sticky at top of lists'
@@ -57,13 +57,13 @@ field_settings:
     type: integer
     datasource_id: 'entity:node'
     property_path: uid
-    index_locked: true
+    indexed_locked: true
     type_locked: true
   node_grants:
     label: 'Node access information'
     type: string
     property_path: search_api_node_grants
-    index_locked: true
+    indexed_locked: true
     type_locked: true
     hidden: true
   type:
