@@ -1,5 +1,6 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2960854 by nedjo, drunken monkey: Fixed "Database search defaults" index.
 - #2930839 by drunken monkey: Update tests according to latest PHPUnit
   compatibility changes
 - #2921022 by drunken monkey, marcvangend: Fixed automatic task execution with
